force-app/main/default/objects/JunctionObject__c/JunctionObject__c.object-meta.xml
<CustomObject>
    <label>JunctionObject</label>
    <nameField>
        <displayFormat>J-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JunctionObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>