force-app/main/default/objects/JunctionObject__c/fields/FirstParentObject__c.field-meta.xml
<CustomField>
    <fullName>FirstParentObject__c</fullName>
    <label>FirstParentObject</label>
    <referenceTo>FirstParentObj__c</referenceTo>
    <relationshipLabel>JunctionObjects</relationshipLabel>
    <relationshipName>JunctionObjectFirst</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>