force-app/main/default/objects/JunctionObject__c/fields/ParentOneName__c.field-meta.xml
<CustomField>
    <fullName>ParentOneName__c</fullName>
    <formula>FirstParentObject__r.Name</formula>
    <label>ParentOneName</label>
    <type>Text</type>
</CustomField>