force-app/main/default/objects/JunctionObject__c/fields/ParentTwoName__c.field-meta.xml
<CustomField>
    <fullName>ParentTwoName__c</fullName>
    <formula>SecondParentObject__r.Name</formula>
    <label>ParentTwoName</label>
    <type>Text</type>
</CustomField>