force-app/main/default/objects/JunctionObject__c/fields/SecondParentObject__c.field-meta.xml
<CustomField>
    <fullName>SecondParentObject__c</fullName>
    <label>SecondParentObject</label>
    <referenceTo>SecondParentObject__c</referenceTo>
    <relationshipLabel>JunctionObjects</relationshipLabel>
    <relationshipName>JunctionObjectSecond</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>